//package dstream;
message EchoRequest{
  optional string field     = 1;
  optional double timestamp = 2;   
};
  
message EchoResponse{
  optional string field     = 1;
  optional double timestamp = 2;   
};

